# kartbox

./: .gitignore  CMakeLists.txt  README.md  manual de uso.md  partitions.csv  sdkconfig
Case/: case kartbox_v2.scad
Datalogger/: analise.py  analise_log.py  instalar dependencias.bat
main/: CMakeLists.txt  config.h  font_montserrat_60.c  font_montserrat_70.c  font_montserrat_80.c  font_montserrat_bold_70.c  font_montserrat_bold_80.c  font_montserrat_medium_60.c  font_montserrat_medium_70.c  idf_component.yml  main.c  telemetry_gps.c  telemetry_gps.h  telemetry_mpu.c  telemetry_mpu.h  telemetry_sd.c  telemetry_sd.h  ui_kartbox.c  ui_kartbox.h  usb_mode.c  usb_mode.h  wifi_server.c  wifi_server.h
