idf_component_register(
    SRCS 
        "main.c" 
        "telemetry_gps.c" 
        "telemetry_mpu.c" 
        "telemetry_sd.c" 
        "ui_kartbox.c"
		"font_montserrat_80.c"
		"font_montserrat_bold_80.c"
    	"font_montserrat_70.c"
		"font_montserrat_bold_70.c"
		"font_montserrat_medium_70.c"
    	"font_montserrat_60.c"
		"font_montserrat_medium_60.c"
    INCLUDE_DIRS "."
)
